Fixed overflow

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;                               
-    padding: 50px 120px;             
+    padding: 100px 120px;             
     margin: 50px;
 }
 
